# pincer

./: .gitignore  Cargo.toml
api/: Cargo.toml
api/entity/: Cargo.toml
api/entity/src/: download.rs  lib.rs  prelude.rs
api/migration/src/: lib.rs  m20221204_222130_crate_downloads_table.rs  m20221213_102719_create_downloads_table.rs
api/src/: graphql.rs  main.rs
api/src/graphql/: mod.rs  mutation.rs  query.rs  subscription.rs
graphql/: schema.gql
web/: .eslintrc.js  codegen.ts  nuxt.config.ts  package.json  pnpm-lock.yaml  unocss.config.ts
web/components/: AddLinkModal.vue  ControlBar.vue  DownloadContext.vue  DownloadList.vue  Modal.vue  SideBar.vue  ToolTip.vue
web/components/download/: ControlBar.vue  DownloadAddModal.vue  DownloadControls.vue  DownloadTable.vue  DownloadTableItem.vue  Table.vue
web/graphql/: graphql.ts  introspection.json
web/layouts/: default.vue
web/node-jiti/: web-nuxt.config.ts.5ed4443a.js
web/pages/: index.vue
web/types/: index.d.ts  types.d.ts
