[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members=[".","migration","entity"]

[dependencies]
entity = {path="entity"}
migration = {path="migration"}
async-graphql = "5.0.2"
axum = "0.6.1"
tokio = { version = "1.22.0", features=["macros","rt-multi-thread"]}
dotenvy = "0.15.6"
tracing-subscriber = "0.3.16"

[dependencies.sea-orm]
version = "0.10.5"
features=["sqlx-postgres", "runtime-tokio-rustls"]
